SVQuest beta.10: replace 14 hardcoded quests with full 618-quest loader